force-app/main/default/objects/Opportunity_Product_Change__c/Opportunity_Product_Change__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Change</label>
    <nameField>
        <label>Product Line Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>