force-app/main/default/objects/Opportunity_Product_Change__c/fields/New_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>New_ShipTo__c</fullName>
    <label>New ShipTo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>