force-app/main/default/objects/Opportunity_Product_Change__c/fields/New_ShipTo_City__c.field-meta.xml
<CustomField>
    <fullName>New_ShipTo_City__c</fullName>
    <label>New ShipTo City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>