force-app/main/default/objects/Opportunity_Product_Change__c/fields/New_warehouse__c.field-meta.xml
<CustomField>
    <fullName>New_warehouse__c</fullName>
    <label>New warehouse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>