force-app/main/default/objects/Opportunity_Product_Change__c/fields/Opportunuty_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunuty_Product_Id__c</fullName>
    <label>Opportunuty Product Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>