force-app/main/default/objects/Opportunity_Product_Change__c/fields/Prior_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Prior_Quantity__c</fullName>
    <label>Prior Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>