force-app/main/default/objects/Opportunity_Product_Change__c/fields/Prior_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>Prior_ShipTo__c</fullName>
    <label>Prior ShipTo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>