force-app/main/default/objects/Opportunity_Product_Change__c/fields/Prior_ShipTo_City__c.field-meta.xml
<CustomField>
    <fullName>Prior_ShipTo_City__c</fullName>
    <label>Prior ShipTo City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>