force-app/main/default/objects/Opportunity_Product_Change__c/fields/Prior_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Prior_Warehouse__c</fullName>
    <label>Prior Warehouse</label>
    <length>40</length>
    <type>Text</type>
</CustomField>