force-app/main/default/objects/Opportunity_Product_Change__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Oportunity_Product_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>