force-app/main/default/objects/Opportunity_Product_Change__c/fields/Stock_Difference__c.field-meta.xml
<CustomField>
    <fullName>Stock_Difference__c</fullName>
    <formula>TEXT(New_Quantity__c - Prior_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Difference</label>
    <type>Text</type>
</CustomField>