force-app/main/default/objects/Opportunity_Product_Change__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <formula>Product__r.Variedade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variety</label>
    <type>Text</type>
</CustomField>